progress in project

--- a/BackEnd/emailing-service/src/main/resources/templates/htmlTemplateActivationAccount.html
+++ b/BackEnd/emailing-service/src/main/resources/templates/htmlTemplateActivationAccount.html
@@ -144,10 +144,10 @@
 												<div align="center" class="alignment"
 													 style="line-height:10px">
 													<div class="fullWidth" style="max-width: 600px;">
-														<img alt="Image" height="auto"
-															 src="https://pbs.twimg.com/media/GUpsvgyW0AAKQnG?format=jpg&name=small"
-															 style="display: block; height: auto; border: 0; width: 100%;"
-															 title="Image" width="600" />
+<!--														<img alt="Image" height="auto"-->
+<!--															 src=""-->
+<!--															 style="display: block; height: auto; border: 0; width: 100%;"-->
+<!--															 title="Image" width="600" />-->
 													</div>
 												</div>
 											</td>
@@ -356,9 +356,9 @@
 											<td class="pad">
 												<div
 														style="color:#FFFFFF;font-family:'Helvetica Neue', Helvetica, Arial, sans-serif;font-size:14px;line-height:120%;text-align:center;mso-line-height-alt:16.8px;">
-													<p style="margin: 0; word-break: break-word;"><span
-															style="word-break: break-word;"><strong>+212
-																				5244-99900</strong></span></p>
+<!--													<p style="margin: 0; word-break: break-word;"><span-->
+<!--															style="word-break: break-word;"><strong>+212-->
+<!--																				5244-99900</strong></span></p>-->
 												</div>
 											</td>
 										</tr>
